# generator

./: .editorconfig  .gitignore  .prettierrc  .releaserc  CHANGELOG.md  Dockerfile  README.md  README1.md  example-open-rpc-generator-config.json  integration-test.js  integration-test.mjs  jest.config.js  open-rpc-generator-config.json  openrpc.json  package-lock.json  package.json  test-generator-config.json  tmp.json  tsconfig.json  tsfmt.json  tslint.json
.circleci/: config.yml  config1.yml
.github/: dependabot.yml
js/: README.md  index.js  jest.config.js  openrpc.json  package-lock.json  package.json
js/client-static/: package-lock.json  package.json  tsconfig.json
js/client-templated/: exported-class.ts.tmpl
js/src/: get-schema.js  get-schema.test.js  index.js  index.test.js  parse-schema.js  parse-schema.test.js
poop/: open-rpc-generator-config.json  openrpc.json
poop/client/: package.json
poop/docs/: package-lock.json  package.json
poop/snap/: bundle.js  package-lock.json  package.json
src/: bootstrapGeneratedPackage.js  bootstrapGeneratedPackage.test.js  bootstrapGeneratedPackage.test.ts  bootstrapGeneratedPackage.ts  cli.ts  config.ts  custom-test-component.js  get-version.ts  getTypings.ts  index.js  index.test.js  index.test.ts  index.ts
src/components/: client.ts  docs.ts  helper.test.ts  helper.ts  index.ts  server.ts  snap.ts  types.ts
src/generators/: index.ts  rust.ts  (+2 more)
templates/client/rust/: Cargo.toml
templates/client/rust/static/src/: test_harness.rs
templates/rs/static/: Cargo.toml
templates/rs/static/src/: test_harness.rs
(+79 files in other folders)
