[package]
name = "template-client"
description = "JSON-RPC Client"
license = "Apache-2.0"
version = "1.0.0"
authors = ["Zachary Belford <belfordz66@gmail.com>", "Mike Lubinets <public@mersinvald.me>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "0.5.0"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
autorand = { version = "0.2.2", features = ["json", "json-value-always-null", "limited-integers"] }
futures = "0.1.25"
failure = "0.1.5"
