[package]
name = "template-client"
version = "1.0.0"
authors = ["Zachary Belford <belfordz66@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-client-core = "0.5.0"
serde = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
autorand = { version = "0.2.1", features = ["json", "json-value-always-null"] }
futures = "0.1.25"
failure = "0.1.5"
